# pg_yaap

./: .gitignore  AGENTS.md  LICENSE  README.md  README.zh.md  meson.build  meson_options.txt  pg_yaap--1.0.sql  pg_yaap.control
.github/workflows/: pg_yaap-ci.yml
expected/: min_parallel.out  select_star.out
sql/: min_parallel.sql  select_star.sql
src/bridge/: AGENTS.md  execute.cpp  execute.h  meson.build  optimizer_registry.cpp  optimizer_registry.h  optimizer_registry.hpp  pg_yaap.c  pg_yaap_postgres.h  state.c  state.h
src/executor/: bench_tpch.sh  meson.build
src/executor/engine/: data_chunk_deform.hpp  expr.cpp  hash_table.hpp  llvmjit_deform_datachunk.cpp  llvmjit_deform_datachunk.h  llvmjit_expr.cpp  meson.build  yaap_engine.hpp
src/executor/engine/core/: AGENTS.md  data_chunk.hpp  data_chunk_deform.cpp  data_chunk_deform.hpp  hash_table_defs.hpp  memory.hpp  parallel_dsa_bridge.cpp  parallel_dsa_bridge.hpp  pg_mcxt_guard.hpp  robin_hood_pg_adapter.hpp  status.hpp  types.hpp
src/executor/engine/expr/: expr.hpp  vector_operations.hpp
src/executor/engine/parallel/: AGENTS.md
src/executor/engine/parallel/pipeline/: AGENTS.md  aggregate_hash_table.cpp  aggregate_hash_table.hpp  cancel.hpp  columnar_filter.cpp  columnar_filter.hpp  dsm_control.hpp  dsm_task_queue.cpp  dsm_task_queue.hpp  event.cpp  event.hpp  meta_pipeline.cpp  meta_pipeline.hpp  operator.hpp  output_sink.cpp  output_sink.hpp  physical_cross_product.cpp  physical_cross_product.hpp  physical_delim_scan.cpp  physical_delim_scan.hpp  physical_filter.cpp  physical_filter.hpp  physical_hash_aggregate.cpp  physical_hash_aggregate.hpp  physical_hash_join.cpp  physical_hash_join.hpp  physical_hash_join_combine.cpp  physical_hash_join_combine.hpp  physical_hash_join_fast_probe.cpp  physical_hash_join_fast_probe.hpp  physical_operator.cpp  physical_operator.hpp  physical_order.cpp  physical_order.hpp  physical_perfect_hash_aggregate.cpp  physical_perfect_hash_aggregate.hpp  physical_projection.cpp  physical_projection.hpp  physical_seq_scan.cpp  physical_seq_scan.hpp  (+47 more)
src/optimizer/: meson.build
src/optimizer/adapter/: yaap_adapter.cpp  yaap_adapter.hpp
src/optimizer/catalog/: pg_external_catalog.cpp  pg_external_catalog.hpp
src/optimizer/logical/: expression_rewriters.cpp  expression_rewriters.hpp  filter_rewrite_utils.cpp  filter_rewrite_utils.hpp  logical_utils.cpp  logical_utils.hpp  mark_join_normalization.cpp  mark_join_normalization.hpp
src/optimizer/optimizer/: filter_pushdown.cpp  join_order_cost_model.cpp  join_order_cost_model.hpp  join_order_filter_info.cpp  join_order_filter_info.hpp  join_order_optimizer.cpp  join_order_plan_enumerator.cpp  join_order_plan_enumerator.hpp  join_order_plan_node.cpp  join_order_plan_node.hpp  join_order_query_graph.cpp  join_order_query_graph.hpp  join_order_query_graph_edges.cpp  join_order_query_graph_manager.cpp  join_order_reconstruct.cpp  join_order_reconstruct.hpp  join_order_relation_manager.cpp  join_order_relation_set.cpp  join_order_relation_set.hpp  join_predicate_extraction.cpp  optimizer_core.cpp  optimizer_core.hpp  optimizer_stats.cpp  optimizer_stats.hpp  predicate_propagation.cpp  remove_unused_columns.cpp  scan_filter_folding.cpp
src/optimizer/physical/: physical_plan.hpp  physical_plan_generator.cpp  physical_plan_generator.hpp  physical_planner.cpp  physical_planner.hpp
src/optimizer/planner/: decorrelate_dependent_join.cpp  decorrelate_dependent_join.hpp  decorrelate_rewrite_utils.cpp  decorrelate_rewrite_utils.hpp  delim_join_cleanup.cpp  delim_join_cleanup.hpp  logical_planner.cpp  logical_planner.hpp  mark_join_cleanup.cpp  mark_join_cleanup.hpp  planner_normalizer.cpp  planner_normalizer.hpp
