pg_yaap_sources += files(
  'adapter/yaap_adapter.cpp',
  'catalog/pg_external_catalog.cpp',
  'planner/decorrelate_dependent_join.cpp',
  'planner/decorrelate_rewrite_utils.cpp',
  'planner/delim_join_cleanup.cpp',
  'planner/logical_planner.cpp',
  'planner/mark_join_cleanup.cpp',
  'planner/planner_normalizer.cpp',
  'logical/expression_rewriters.cpp',
  'logical/filter_rewrite_utils.cpp',
  'logical/logical_utils.cpp',
  'logical/mark_join_normalization.cpp',
  'optimizer/filter_pushdown.cpp',
  'optimizer/join_predicate_extraction.cpp',
  'optimizer/optimizer_core.cpp',
  'optimizer/join_order_cost_model.cpp',
  'optimizer/join_order_filter_info.cpp',
  'optimizer/join_order_optimizer.cpp',
  'optimizer/join_order_plan_node.cpp',
  'optimizer/join_order_plan_enumerator.cpp',
  'optimizer/join_order_query_graph.cpp',
  'optimizer/join_order_query_graph_edges.cpp',
  'optimizer/join_order_query_graph_manager.cpp',
  'optimizer/join_order_reconstruct.cpp',
  'optimizer/join_order_relation_manager.cpp',
  'optimizer/predicate_propagation.cpp',
  'optimizer/remove_unused_columns.cpp',
  'optimizer/scan_filter_folding.cpp',
  'optimizer/join_order_relation_set.cpp',
  'optimizer/optimizer_stats.cpp',
  'physical/physical_plan_generator.cpp',
  'physical/physical_planner.cpp',
)
