pg_yaap_sources += files(
  'expr.cpp',
  'parallel/pipeline/pipeline_worker_main.cpp',
  'parallel/pipeline/pipeline_leader.cpp',
  'parallel/pipeline/physical_operator.cpp',
  'parallel/pipeline/meta_pipeline.cpp',
  'parallel/pipeline/pipeline_descriptor.cpp',
  'parallel/pipeline/event.cpp',
  'parallel/pipeline/pipeline_run_event.cpp',
  'parallel/pipeline/pipeline_combine_event.cpp',
  'parallel/pipeline/pipeline_finalize_event.cpp',
  'parallel/pipeline/task.cpp',
  'parallel/pipeline/pipeline_profile.cpp',
  'parallel/pipeline/dsm_task_queue.cpp',
  'parallel/pipeline/runtime_dsm.cpp',
  'parallel/pipeline/task_scheduler.cpp',
  'parallel/pipeline/physical_seq_scan.cpp',
  'parallel/pipeline/physical_seq_scan_read_stream.cpp',
  'parallel/pipeline/physical_delim_scan.cpp',
  'parallel/pipeline/columnar_filter.cpp',
  'parallel/pipeline/physical_filter.cpp',
  'parallel/pipeline/physical_projection.cpp',
  'parallel/pipeline/physical_hash_aggregate.cpp',
  'parallel/pipeline/physical_hash_join.cpp',
  'parallel/pipeline/physical_hash_join_combine.cpp',
  'parallel/pipeline/physical_hash_join_fast_probe.cpp',
  'parallel/pipeline/physical_cross_product.cpp',
  'parallel/pipeline/physical_perfect_hash_aggregate.cpp',
  'parallel/pipeline/physical_order.cpp',
  'parallel/pipeline/physical_top_n.cpp',
  'parallel/pipeline/output_sink.cpp',
  'parallel/pipeline/translator_layout.cpp',
  'parallel/pipeline/tuple_data_layout.cpp',
  'parallel/pipeline/tuple_data_ops.cpp',
  'parallel/pipeline/tuple_data_collection.cpp',
  'parallel/pipeline/aggregate_hash_table.cpp',
  'parallel/pipeline/yaap_pipeline_init.cpp',
  'parallel/pipeline/yaap_opt_translator_support.cpp',
  'parallel/pipeline/yaap_opt_translator_common.cpp',
  'parallel/pipeline/yaap_opt_translator_filters.cpp',
  'parallel/pipeline/yaap_opt_translator_exprs.cpp',
  'parallel/pipeline/yaap_opt_translator_nodes_scan_agg.cpp',
  'parallel/pipeline/yaap_opt_translator_nodes_join.cpp',
  'core/parallel_dsa_bridge.cpp',
  'core/data_chunk_deform.cpp',
)

if pg_has_llvm
  pg_yaap_sources += files(
    'llvmjit_deform_datachunk.cpp',
    'llvmjit_expr.cpp',
  )
endif
